# auto-secret

./: Cargo.toml  rustfmt.toml
samples/: test.yaml
src/: main.rs  prelude.rs  secret_types.rs
