[package]
name = "auto-secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argwerk = "0.20.1"
async-trait = "0.1.53"
color-eyre = "0.6.1"
futures = "0.3.21"
hex = "0.4.3"
k8s-openapi = { version = "0.14.0", features = ["v1_21"] }
kube = { version = "0.71.0", features = ["derive", "runtime"] }
nameof = "1.2.2"
schemars = "0.8.8"
seahash = "4.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.0"
ulid = "0.5.0"
uuid = { version = "1.0.0", features = ["v4"] }
